Correct issue with navbar collapsed menu & landing page responsiveness

--- a/src/main/resources/static/sass/base/_typography.scss
+++ b/src/main/resources/static/sass/base/_typography.scss
@@ -49,6 +49,9 @@ body {
         letter-spacing: .5rem;
         text-transform: uppercase;
         z-index: 2000;
+        @include respond(nav-collapse) {
+            display: none;
+        }
     }
 
 }
